--- a/ToyConn_pro/src/main/webapp/css/main.css
+++ b/ToyConn_pro/src/main/webapp/css/main.css
@@ -2356,6 +2356,7 @@ input.num-product::-webkit-inner-spin-button {
   font-size: 36px;
   line-height: 1.1;
   text-transform: uppercase;
+  margin: 50px;
 }
 
 .ltext-104 {
