--- a/ToyConn_pro/src/main/webapp/css/main.css
+++ b/ToyConn_pro/src/main/webapp/css/main.css
@@ -1887,7 +1887,7 @@ input.num-product::-webkit-inner-spin-button {
 
 .overlay-modal1 {
   position: fixed;
-  z-index: -1;
+ /*  z-index: -1; */
   width: 100%;
   height: 100%;
   top: 0;
